fixed spacing of main page

--- a/react-app/src/components/mainpage/mainpage.css
+++ b/react-app/src/components/mainpage/mainpage.css
@@ -56,6 +56,7 @@
 
 .mainpage-shoe-text-container {
     display: flex;
+    height: 100%;
     flex-direction: column;
     justify-content: space-between;
 }
